Assignment 1/assignment 1/src/main/d96/parser/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "<INVALID>", "<INVALID>", "'Program'", 
                     "'Break'", "'Continue'", "'If'", "'Elseif'", "'Else'", 
                     "'Foreach'", "'Array'", "'In'", "'Int'", "'Float'", 
                     "'Boolean'", "'String'", "'Return'", "'Null'", "'Class'", 
                     "'Val'", "'Var'", "'Self'", "'Constructor'", "'Destructor'", 
                     "'New'", "'By'", "'True'", "'False'", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
                     "'&&'", "'||'", "'==.'", "'+.'", "'=='", "'='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'::'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "':'", "'.'", "'..'", "','", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "By_keyword", "Return_word", 
                      "Program", "BREAK", "CONTINUE", "IF", "ELSEIF", "ELSE", 
                      "FOREACH", "ARRAY", "IN", "INT", "FLOAT", "BOOLEAN", 
                      "STRING", "RETURN", "NULL", "CLASS", "VAL", "VAR", 
                      "Self", "CONSTRUCTOR", "DESTRUCTOR", "NEW", "BY", 
                      "TRUE", "FALSE", "ID", "DO_ID", "ADD", "MINUS", "PRODUCT", 
                      "DIVIDE", "MOD", "NOT", "AND", "OR", "COMPARE_STRING", 
                      "ADD_STRING", "EQUAL", "ASSIGN", "DIFFER", "LESS", 
                      "LESS_EQUAL", "GREATER", "GREATER_EQUAL", "DOUBLE_COLON", 
                      "NONZERO_INT", "INT_LIT", "FLOAT_LIT", "STRING_LIT", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ARRAY_LIT", "MUL_ARRAY", 
                      "LB", "RB", "LP", "RP", "LS", "RS", "COLON", "DOT", 
                      "DOUBLE_DOT", "CM", "SEMI", "COMMENT", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_declaration = 1
    RULE_class_declaration_part = 2
    RULE_class_keyword = 3
    RULE_member = 4
    RULE_attribute_lit = 5
    RULE_attribute_list = 6
    RULE_attribute = 7
    RULE_type_name = 8
    RULE_method_lit = 9
    RULE_method_constructor = 10
    RULE_main_destructor = 11
    RULE_normal_method = 12
    RULE_parameter_list = 13
    RULE_identifier_list = 14
    RULE_block_stm_no_return = 15
    RULE_stm_no_return = 16
    RULE_block_stm = 17
    RULE_stm = 18
    RULE_variable_statement = 19
    RULE_variable_list = 20
    RULE_assignment_statement = 21
    RULE_if_statement = 22
    RULE_for_in_statement = 23
    RULE_break_statement = 24
    RULE_continue_statement = 25
    RULE_return_statement = 26
    RULE_method_statement = 27
    RULE_expr_list = 28
    RULE_expr = 29
    RULE_string_expr = 30
    RULE_relational_expr = 31
    RULE_logical_expr = 32
    RULE_add_expr = 33
    RULE_mul_expr = 34
    RULE_log_expr = 35
    RULE_sign_expr = 36
    RULE_index_expr = 37
    RULE_instance_access_expr = 38
    RULE_static_access_expr = 39
    RULE_new_expr = 40
    RULE_parenth_exp = 41
    RULE_operative = 42
    RULE_literal = 43
    RULE_instance_element = 44
    RULE_static_element = 45
    RULE_array_component = 46
    RULE_string_op = 47
    RULE_relational_op = 48
    RULE_relational_op_bool = 49
    RULE_relational_op_number = 50
    RULE_logical_op = 51
    RULE_add_op = 52
    RULE_multi_op = 53
    RULE_negation_op = 54
    RULE_negation_number = 55
    RULE_index_op = 56
    RULE_main_keyword = 57
    RULE_identifier = 58
    RULE_array_declaration = 59
    RULE_array_attribute = 60
    RULE_array_type = 61
    RULE_array_lit = 62
    RULE_mul_array = 63
    RULE_boollit = 64

    ruleNames =  [ "program", "class_declaration", "class_declaration_part", 
                   "class_keyword", "member", "attribute_lit", "attribute_list", 
                   "attribute", "type_name", "method_lit", "method_constructor", 
                   "main_destructor", "normal_method", "parameter_list", 
                   "identifier_list", "block_stm_no_return", "stm_no_return", 
                   "block_stm", "stm", "variable_statement", "variable_list", 
                   "assignment_statement", "if_statement", "for_in_statement", 
                   "break_statement", "continue_statement", "return_statement", 
                   "method_statement", "expr_list", "expr", "string_expr", 
                   "relational_expr", "logical_expr", "add_expr", "mul_expr", 
                   "log_expr", "sign_expr", "index_expr", "instance_access_expr", 
                   "static_access_expr", "new_expr", "parenth_exp", "operative", 
                   "literal", "instance_element", "static_element", "array_component", 
                   "string_op", "relational_op", "relational_op_bool", "relational_op_number", 
                   "logical_op", "add_op", "multi_op", "negation_op", "negation_number", 
                   "index_op", "main_keyword", "identifier", "array_declaration", 
                   "array_attribute", "array_type", "array_lit", "mul_array", 
                   "boollit" ]

    EOF = Token.EOF
    T__0=1
    By_keyword=2
    Return_word=3
    Program=4
    BREAK=5
    CONTINUE=6
    IF=7
    ELSEIF=8
    ELSE=9
    FOREACH=10
    ARRAY=11
    IN=12
    INT=13
    FLOAT=14
    BOOLEAN=15
    STRING=16
    RETURN=17
    NULL=18
    CLASS=19
    VAL=20
    VAR=21
    Self=22
    CONSTRUCTOR=23
    DESTRUCTOR=24
    NEW=25
    BY=26
    TRUE=27
    FALSE=28
    ID=29
    DO_ID=30
    ADD=31
    MINUS=32
    PRODUCT=33
    DIVIDE=34
    MOD=35
    NOT=36
    AND=37
    OR=38
    COMPARE_STRING=39
    ADD_STRING=40
    EQUAL=41
    ASSIGN=42
    DIFFER=43
    LESS=44
    LESS_EQUAL=45
    GREATER=46
    GREATER_EQUAL=47
    DOUBLE_COLON=48
    NONZERO_INT=49
    INT_LIT=50
    FLOAT_LIT=51
    STRING_LIT=52
    ILLEGAL_ESCAPE=53
    UNCLOSE_STRING=54
    ARRAY_LIT=55
    MUL_ARRAY=56
    LB=57
    RB=58
    LP=59
    RP=60
    LS=61
    RS=62
    COLON=63
    DOT=64
    DOUBLE_DOT=65
    CM=66
    SEMI=67
    COMMENT=68
    WS=69
    ERROR_CHAR=70

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declaration(self):
            return self.getTypedRuleContext(D96Parser.Class_declarationContext,0)


        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.class_declaration()
            self.state = 131
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declaration_part(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declaration_partContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declaration_partContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_class_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declaration" ):
                return visitor.visitClass_declaration(self)
            else:
                return visitor.visitChildren(self)




    def class_declaration(self):

        localctx = D96Parser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 133
                self.class_declaration_part()
                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declaration_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def main_keyword(self):
            return self.getTypedRuleContext(D96Parser.Main_keywordContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def Program(self):
            return self.getToken(D96Parser.Program, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.MemberContext)
            else:
                return self.getTypedRuleContext(D96Parser.MemberContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_class_declaration_part

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declaration_part" ):
                return visitor.visitClass_declaration_part(self)
            else:
                return visitor.visitChildren(self)




    def class_declaration_part(self):

        localctx = D96Parser.Class_declaration_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_declaration_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(D96Parser.CLASS)
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.T__0]:
                self.state = 139
                self.main_keyword()
                pass
            elif token in [D96Parser.ID]:
                self.state = 140
                self.match(D96Parser.ID)
                pass
            elif token in [D96Parser.Program]:
                self.state = 141
                self.match(D96Parser.Program)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 144
                self.match(D96Parser.COLON)
                self.state = 145
                self.match(D96Parser.ID)


            self.state = 148
            self.match(D96Parser.LP)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.T__0) | (1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.ID) | (1 << D96Parser.DO_ID))) != 0):
                self.state = 149
                self.member()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 155
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_keywordContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_keyword

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_keyword" ):
                return visitor.visitClass_keyword(self)
            else:
                return visitor.visitChildren(self)




    def class_keyword(self):

        localctx = D96Parser.Class_keywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_keyword)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(D96Parser.CLASS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_lit(self):
            return self.getTypedRuleContext(D96Parser.Attribute_litContext,0)


        def method_lit(self):
            return self.getTypedRuleContext(D96Parser.Method_litContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = D96Parser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_member)
        try:
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.attribute_lit()
                pass
            elif token in [D96Parser.T__0, D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.DO_ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.method_lit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_litContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_list(self):
            return self.getTypedRuleContext(D96Parser.Attribute_listContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def type_name(self):
            return self.getTypedRuleContext(D96Parser.Type_nameContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def expr_list(self):
            return self.getTypedRuleContext(D96Parser.Expr_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute_lit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_lit" ):
                return visitor.visitAttribute_lit(self)
            else:
                return visitor.visitChildren(self)




    def attribute_lit(self):

        localctx = D96Parser.Attribute_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attribute_lit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 164
            self.attribute_list()
            self.state = 165
            self.match(D96Parser.COLON)
            self.state = 166
            self.type_name()
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ASSIGN:
                self.state = 167
                self.match(D96Parser.ASSIGN)
                self.state = 168
                self.expr_list()


            self.state = 171
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.AttributeContext)
            else:
                return self.getTypedRuleContext(D96Parser.AttributeContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def getRuleIndex(self):
            return D96Parser.RULE_attribute_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_list" ):
                return visitor.visitAttribute_list(self)
            else:
                return visitor.visitChildren(self)




    def attribute_list(self):

        localctx = D96Parser.Attribute_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attribute_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.attribute()
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.CM:
                self.state = 174
                self.match(D96Parser.CM)
                self.state = 175
                self.attribute()
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DO_ID(self):
            return self.getToken(D96Parser.DO_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = D96Parser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.DO_ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(D96Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(D96Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(D96Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(D96Parser.STRING, 0)

        def array_declaration(self):
            return self.getTypedRuleContext(D96Parser.Array_declarationContext,0)


        def attribute(self):
            return self.getTypedRuleContext(D96Parser.AttributeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_type_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_name" ):
                return visitor.visitType_name(self)
            else:
                return visitor.visitChildren(self)




    def type_name(self):
